--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
         <p class="label-highscore">
           🥇 Highscore: <span class="highscore">0</span>
         </p>
+        
       </section>
+      <div>
+      <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
+      <lottie-player src="https://assets2.lottiefiles.com/packages/lf20_15vyYQNGMX.json" mode="bounce" background="#BD6489"  speed="1"  style="width: 600px; height: 600px;" hover loop controls autoplay></lottie-player>
+      <p>made by gaurav mishra</p> 
+    </div>
     </main>
     <script src="script.js"></script>
   </body>
